--- a/tests/charset/Makefile
+++ b/tests/charset/Makefile
@@ -1,5 +1,5 @@
 
 
 main: main.cpp ../../libvmime-debug.a
-	g++ -g -o main main.cpp ../../libvmime-debug.a
+	g++ -g -o main main.cpp -I../.. ../../libvmime-debug.a -lgnutls -lgsasl
 
