OpenSSL support (thanks to Mehmet Bozkurt).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -448,6 +448,7 @@ ENDIF()
 # SSL/TLS support
 
 INCLUDE(FindGnuTLS)
+INCLUDE(FindOpenSSL)
 
 
 INCLUDE(CheckFunctionExists)
@@ -457,7 +458,7 @@ CHECK_FUNCTION_EXISTS(gnutls_priority_set_direct VMIME_HAVE_GNUTLS_PRIORITY_FUNC
 
 OPTION(
 	VMIME_HAVE_TLS_SUPPORT
-	"SSL/TLS support (requires GNU TLS library)"
+	"SSL/TLS support (requires either GNU TLS or OpenSSL library)"
 	ON
 )
 
@@ -467,6 +468,11 @@ OPTION(
 	ON
 )
 
+OPTION(
+	VMIME_TLS_SUPPORT_LIB_IS_OPENSSL
+	"Use OpenSSL library for SSL/TLS support"
+	OFF
+)
 
 IF(VMIME_HAVE_TLS_SUPPORT)
 
@@ -491,6 +497,23 @@ IF(VMIME_HAVE_TLS_SUPPORT)
 		SET(VMIME_PKGCONFIG_LIBS "${VMIME_PKGCONFIG_LIBS} ${GNUTLS_LIBRARY_DIRS} ${GNUTLS_LIBRARY}")
 		SET(VMIME_PKGCONFIG_CFLAGS "${VMIME_PKGCONFIG_CFLAGS} ${GNUTLS_INCLUDE_DIR}")
 		SET(VMIME_PKGCONFIG_REQUIRES "${VMIME_PKGCONFIG_REQUIRES} libgnutls")
+
+	ELSEIF(VMIME_TLS_SUPPORT_LIB_IS_OPENSSL)
+
+		INCLUDE_DIRECTORIES(
+			${INCLUDE_DIRECTORIES}
+			${OPENSSL_INCLUDE_DIR}
+		)
+
+		TARGET_LINK_LIBRARIES(
+			${VMIME_LIBRARY_NAME}
+			${TARGET_LINK_LIBRARIES}
+			${OPENSSL_LIBRARIES}
+		)
+
+		SET(VMIME_PKGCONFIG_LIBS "${VMIME_PKGCONFIG_LIBS} ${OPENSSL_LIBRARIES}")
+		SET(VMIME_PKGCONFIG_CFLAGS "${VMIME_PKGCONFIG_CFLAGS} ${OPENSSL_INCLUDE_DIR}")
+		SET(VMIME_PKGCONFIG_REQUIRES "${VMIME_PKGCONFIG_REQUIRES} libopenssl")
 
 	ELSE()
 
@@ -535,7 +558,13 @@ ENDIF()
 # POSIX-specific checks
 
 INCLUDE(CheckFunctionExists)
+INCLUDE(CheckSymbolExists)
+
 CHECK_FUNCTION_EXISTS(getaddrinfo VMIME_HAVE_GETADDRINFO)
+
+CHECK_FUNCTION_EXISTS(gettid VMIME_HAVE_GETTID)
+CHECK_FUNCTION_EXISTS(syscall VMIME_HAVE_SYSCALL)
+CHECK_SYMBOL_EXISTS(SYS_gettid sys/syscall.h VMIME_HAVE_SYSCALL_GETTID)
 
 FIND_PACKAGE(Threads)
 FIND_LIBRARY(PTHREAD pthread)
