Fixed linking with pthread library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -579,13 +579,25 @@ CHECK_FUNCTION_EXISTS(syscall VMIME_HAVE_SYSCALL)
 CHECK_SYMBOL_EXISTS(SYS_gettid sys/syscall.h VMIME_HAVE_SYSCALL_GETTID)
 
 FIND_PACKAGE(Threads)
-FIND_LIBRARY(PTHREAD pthread)
 
-IF(PTHREAD)
+TARGET_LINK_LIBRARIES(
+	${VMIME_LIBRARY_NAME}
+	${TARGET_LINK_LIBRARIES}
+	${CMAKE_THREAD_LIBS_INIT}
+)
+
+FIND_LIBRARY(PTHREAD_LIB pthread)
+
+IF(PTHREAD_LIB)
 	SET(VMIME_HAVE_PTHREAD 1)
-ELSE(PTHREAD)
+	TARGET_LINK_LIBRARIES(
+		${VMIME_LIBRARY_NAME}
+		${TARGET_LINK_LIBRARIES}
+		${PTHREAD_LIB}
+	)
+ELSE(PTHREAD_LIB)
 	SET(VMIME_HAVE_PTHREAD 0)
-ENDIF(PTHREAD)
+ENDIF(PTHREAD_LIB)
 
 
 ##############################################################################
