Check for MLang on Windows platform.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
 
 INCLUDE(cmake/Utils.cmake)
 
+INCLUDE(CheckIncludeFiles)
 INCLUDE(CheckFunctionExists)
 INCLUDE(CheckSymbolExists)
 INCLUDE(CheckTypeSize)
@@ -583,6 +584,22 @@ IF(WIN32)
 			${TARGET_LINK_LIBRARIES}
 			"ws2_32"
 		)
+	ENDIF()
+
+	# MLang
+	CHECK_INCLUDE_FILES(Mlang.h VMIME_HAVE_MLANG_H)
+	CHECK_LIBRARY_EXISTS("mlang" ConvertINetString "${CMAKE_LIBRARY_PATH}" VMIME_HAVE_MLANG_LIB)
+
+	IF(VMIME_HAVE_MLANG_H)
+		IF(VMIME_HAVE_MLANG_LIB)
+			SET(VMIME_HAVE_MLANG ON)
+
+			TARGET_LINK_LIBRARIES(
+				${VMIME_LIBRARY_NAME}
+				${TARGET_LINK_LIBRARIES}
+				"mlang"
+			)
+		ENDIF()
 	ENDIF()
 
 ENDIF()
