Fixed dependencies and generation of .pc file (issue #28).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -300,9 +300,6 @@ IF(${WIN32})
 	SET(libdir ${CMAKE_INSTALL_PREFIX}/bin)
 ENDIF(${WIN32})
 
-CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/libvmime.pc.in ${CMAKE_BINARY_DIR}/libvmime.pc @ONLY)
-INSTALL(FILES ${CMAKE_BINARY_DIR}/libvmime.pc DESTINATION lib${LIB_SUFFIX}/pkgconfig COMPONENT headers)
-
 
 ##############################################################################
 # Build type
@@ -540,7 +537,7 @@ IF(VMIME_HAVE_TLS_SUPPORT)
 
 		SET(VMIME_PKGCONFIG_LIBS "${VMIME_PKGCONFIG_LIBS} ${GNUTLS_LIBRARY_DIRS} ${GNUTLS_LIBRARY}")
 		SET(VMIME_PKGCONFIG_CFLAGS "${VMIME_PKGCONFIG_CFLAGS} ${GNUTLS_INCLUDE_DIR}")
-		SET(VMIME_PKGCONFIG_REQUIRES "${VMIME_PKGCONFIG_REQUIRES} libgnutls")
+		SET(VMIME_PKGCONFIG_REQUIRES "${VMIME_PKGCONFIG_REQUIRES} gnutls")
 
 	ELSEIF(VMIME_TLS_SUPPORT_LIB_IS_OPENSSL)
 
@@ -559,7 +556,7 @@ IF(VMIME_HAVE_TLS_SUPPORT)
 
 		SET(VMIME_PKGCONFIG_LIBS "${VMIME_PKGCONFIG_LIBS} ${OPENSSL_LIBRARIES}")
 		SET(VMIME_PKGCONFIG_CFLAGS "${VMIME_PKGCONFIG_CFLAGS} ${OPENSSL_INCLUDE_DIR}")
-		SET(VMIME_PKGCONFIG_REQUIRES "${VMIME_PKGCONFIG_REQUIRES} libopenssl")
+		SET(VMIME_PKGCONFIG_REQUIRES "${VMIME_PKGCONFIG_REQUIRES} openssl")
 
 	ELSE()
 
@@ -587,6 +584,9 @@ IF(VMIME_BUILD_SHARED_LIBRARY)
 		${ICONV_LIBRARIES}
 	)
 ENDIF()
+
+SET(VMIME_PKGCONFIG_LIBS "${VMIME_PKGCONFIG_LIBS} ${ICONV_LIBRARIES}")
+SET(VMIME_PKGCONFIG_CFLAGS "${VMIME_PKGCONFIG_CFLAGS} ${ICONV_INCLUDE_DIR}")
 
 
 ##############################################################################
@@ -766,6 +766,10 @@ ENDIF()
 
 # Set our configure file
 CONFIGURE_FILE(cmake/config.hpp.cmake vmime/config.hpp)
+
+# PkgConfig post-configuration
+CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/libvmime.pc.in ${CMAKE_BINARY_DIR}/libvmime.pc @ONLY)
+INSTALL(FILES ${CMAKE_BINARY_DIR}/libvmime.pc DESTINATION lib${LIB_SUFFIX}/pkgconfig COMPONENT headers)
 
 INCLUDE(CPack)
 
