--- a/libvmime.pc.in
+++ b/libvmime.pc.in
@@ -3,10 +3,10 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: @VMIME_LIBRARY_NAME@
+Name: @VMIME_PACKAGE_NAME@
 Description: @VMIME_PACKAGE_DESCRIPTION@
 Version: @VMIME_PACKAGE_VERSION@
-Requires: @VMIME_PKGCONFIG_REQUIRES@
-Libs: -L${libdir} -lvmime @VMIME_PKGCONFIG_LIBS@
+Requires.private: @VMIME_PKGCONFIG_REQUIRES@
+Libs.private: -L${libdir} -l@VMIME_LIBRARY_NAME@ @VMIME_PKGCONFIG_LIBS@
 Cflags: -I${includedir}/ @VMIME_PKGCONFIG_CFLAGS@
 
