Fixed 'config.hpp' not installed (issue #29).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,8 @@ FILE(
 	vmime/*
 )
 
+LIST(APPEND VMIME_LIBRARY_INCLUDE_FILES "vmime/config.hpp")
+
 INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_SOURCE_DIR}
 )
