link winsock for static builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -630,6 +630,8 @@ IF(WIN32)
 				${TARGET_LINK_LIBRARIES}
 				"ws2_32"
 			)
+		ELSE()
+			SET(VMIME_PKGCONFIG_LIBS "${VMIME_PKGCONFIG_LIBS} -lws2_32")
 		ENDIF()
 	ENDIF()
 
