Fixed library version.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,8 +103,8 @@ IF(VMIME_BUILD_SHARED_LIBRARY)
 	SET_TARGET_PROPERTIES(
 		${VMIME_LIBRARY_NAME}
 		PROPERTIES
-		VERSION    "${VMIME_VERSION}"
-		SOVERSION  "${VMIME_API_VERSION}"
+		VERSION    "${VMIME_API_VERSION}"
+		SOVERSION  "${VMIME_API_VERSION_CURRENT}"
 	)
 
 ENDIF()
