--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -574,6 +574,10 @@ OPTION(
 
 IF(VMIME_HAVE_TLS_SUPPORT)
 
+	IF(VMIME_TLS_SUPPORT_LIB_IS_GNUTLS AND VMIME_TLS_SUPPORT_LIB_IS_OPENSSL)
+		MESSAGE(FATAL_ERROR "Options VMIME_TLS_SUPPORT_LIB_IS_GNUTLS and VMIME_TLS_SUPPORT_LIB_IS_OPENSSL are mutually exclusive (select one or the other, but not both!)")
+	ENDIF()
+
 	IF(VMIME_TLS_SUPPORT_LIB_IS_GNUTLS)
 
 		INCLUDE_DIRECTORIES(
@@ -649,6 +653,10 @@ OPTION(
 	"Use ICU library for charset conversion"
 	${VMIME_CHARSETCONV_LIB_IS_ICU_DEFAULT}
 )
+
+IF(VMIME_CHARSETCONV_LIB_IS_ICONV AND VMIME_CHARSETCONV_LIB_IS_ICU)
+	MESSAGE(FATAL_ERROR "Options VMIME_CHARSETCONV_LIB_IS_ICONV and VMIME_CHARSETCONV_LIB_IS_ICU are mutually exclusive (select one or the other, but not both!)")
+ENDIF()
 
 IF(VMIME_CHARSETCONV_LIB_IS_ICONV)
 
