Fixed export header file location.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ IF(VMIME_BUILD_SHARED_LIBRARY)
 	GENERATE_EXPORT_HEADER(
 		${VMIME_LIBRARY_NAME}
 		BASE_NAME VMIME
-		EXPORT_FILE_NAME vmime/export.hpp
+		EXPORT_FILE_NAME ${CMAKE_SOURCE_DIR}/vmime/export.hpp
 	)
 
 	SET_TARGET_PROPERTIES(
