Do not include generated header files in ADD_LIBRARY().

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,8 @@ FILE(
 	vmime/*
 )
 
-LIST(APPEND VMIME_LIBRARY_INCLUDE_FILES "vmime/config.hpp")
+LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "vmime/config.hpp")
+LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "vmime/export.hpp")
 
 INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_SOURCE_DIR}
@@ -109,8 +110,6 @@ IF(VMIME_BUILD_SHARED_LIBRARY)
 		BASE_NAME VMIME
 		EXPORT_FILE_NAME ${CMAKE_SOURCE_DIR}/vmime/export.hpp
 	)
-
-	LIST(APPEND VMIME_LIBRARY_INCLUDE_FILES "vmime/export.hpp")
 
 	SET_TARGET_PROPERTIES(
 		${VMIME_LIBRARY_NAME}
@@ -219,6 +218,7 @@ ENDIF()
 
 # Installation of header files
 INSTALL_HEADERS_WITH_DIRECTORY(VMIME_LIBRARY_INCLUDE_FILES headers)
+INSTALL_HEADERS_WITH_DIRECTORY(VMIME_LIBRARY_GENERATED_INCLUDE_FILES headers)
 
 #INSTALL(
 #	FILES ${VMIME_LIBRARY_INCLUDE_FILES}
