--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,12 +78,14 @@ FILE(
 	vmime/*
 )
 
-LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "vmime/config.hpp")
-LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "vmime/export.hpp")
+LIST(APPEND VMIME_LIBRARY_INCLUDE_FILES "vmime/config.hpp")
 
 INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_SOURCE_DIR}
 )
+
+INCLUDE(GenerateExportHeader)
+ADD_COMPILER_EXPORT_FLAGS()
 
 # Shared library
 OPTION(
@@ -93,10 +95,6 @@ OPTION(
 )
 
 IF(VMIME_BUILD_SHARED_LIBRARY)
-
-	INCLUDE(GenerateExportHeader)
-
-	ADD_COMPILER_EXPORT_FLAGS()
 
 	ADD_LIBRARY(
 		${VMIME_LIBRARY_NAME}
@@ -108,14 +106,18 @@ IF(VMIME_BUILD_SHARED_LIBRARY)
 	GENERATE_EXPORT_HEADER(
 		${VMIME_LIBRARY_NAME}
 		BASE_NAME VMIME
-		EXPORT_FILE_NAME ${CMAKE_SOURCE_DIR}/vmime/export.hpp
+		STATIC_DEFINE VMIME_STATIC
+		EXPORT_FILE_NAME ${CMAKE_SOURCE_DIR}/vmime/export-shared.hpp
 	)
+
+	LIST(APPEND VMIME_LIBRARY_INCLUDE_FILES "vmime/export-shared.hpp")
 
 	SET_TARGET_PROPERTIES(
 		${VMIME_LIBRARY_NAME}
 		PROPERTIES
 		VERSION    "${VMIME_API_VERSION}"
 		SOVERSION  "${VMIME_API_VERSION_CURRENT}"
+		COMPILE_FLAGS -DVMIME_SHARED
 	)
 
 ENDIF()
@@ -139,11 +141,20 @@ IF(VMIME_BUILD_STATIC_LIBRARY)
 		${VMIME_LIBRARY_INCLUDE_FILES}
 	)
 
+	GENERATE_EXPORT_HEADER(
+		${VMIME_LIBRARY_NAME}-static
+		BASE_NAME VMIME
+		STATIC_DEFINE VMIME_STATIC
+		EXPORT_FILE_NAME ${CMAKE_SOURCE_DIR}/vmime/export-static.hpp
+	)
+
+	LIST(APPEND VMIME_LIBRARY_INCLUDE_FILES "vmime/export-static.hpp")
+
 	SET_TARGET_PROPERTIES(
 		${VMIME_LIBRARY_NAME}-static
 		PROPERTIES
 		OUTPUT_NAME  ${VMIME_LIBRARY_NAME}
-		COMPILE_FLAGS -DVMIME_STATIC_DEFINE
+		COMPILE_FLAGS -DVMIME_STATIC
 	)
 
 ENDIF()
