Changed the way the path to export header file is specified.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,14 @@ IF(VMIME_BUILD_SHARED_LIBRARY)
 		${VMIME_LIBRARY_NAME}
 		BASE_NAME VMIME
 		STATIC_DEFINE VMIME_STATIC
-		EXPORT_FILE_NAME ${CMAKE_SOURCE_DIR}/vmime/export-shared.hpp
+		EXPORT_FILE_NAME export-shared.hpp
+	)
+
+	FILE(
+		COPY
+		${CMAKE_CURRENT_BINARY_DIR}/export-shared.hpp
+		DESTINATION
+		${PROJECT_SOURCE_DIR}/vmime
 	)
 
 	LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "vmime/export-shared.hpp")
@@ -145,7 +152,14 @@ IF(VMIME_BUILD_STATIC_LIBRARY)
 		${VMIME_LIBRARY_NAME}-static
 		BASE_NAME VMIME
 		STATIC_DEFINE VMIME_STATIC
-		EXPORT_FILE_NAME ${CMAKE_SOURCE_DIR}/vmime/export-static.hpp
+		EXPORT_FILE_NAME export-static.hpp
+	)
+
+	FILE(
+		COPY
+		${CMAKE_CURRENT_BINARY_DIR}/export-static.hpp
+		DESTINATION
+		${PROJECT_SOURCE_DIR}/vmime
 	)
 
 	LIST(APPEND VMIME_LIBRARY_GENERATED_INCLUDE_FILES "vmime/export-static.hpp")
