--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,12 @@ script:
   - cd _build
   - cmake .. -DCMAKE_INSTALL_PREFIX=../_install $OPTIONS
   - cmake .. -L
+  - echo "============================== config.hpp =============================="
+  - cat ../vmime/config.hpp
+  - echo "========================== export-shared.hpp ==========================="
+  - cat ../vmime/export-shared.hpp
+  - echo "========================== export-static.hpp ==========================="
+  - cat ../vmime/export-static.hpp
+  - echo "================================ BUILD ================================="
   - cmake --build . --target install
   - ctest
